# fluxpoint.rs

./: Cargo.toml  README.md  t.json
.github/workflows/: release.yaml
src/: client.rs  error.rs  lib.rs
src/models/: api_error.rs  base.rs  color_info.rs  cs_datetime_format.rs  dad_joke.rs  html_to_markdown.rs  macros.rs  markdown_to_html.rs  mod.rs  random_color.rs  snowflake_date.rs  user_info.rs
src/models/core/: base.rs  macros.rs  mod.rs
src/models/imagegen/: gen_options.rs  image.rs  image_builder.rs  image_dimensions.rs  image_type.rs  imagebase.rs  macros.rs  mod.rs
