[package]
name = "fluxpoint"
version = "0.1.0"
edition = "2021"

[features]
imagegen = []

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = "0.99.17"
paste = "1.0.15"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
serde_repr = "0.1.19"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["full"] }
